--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,5 +9,21 @@
         android:id="@+id/home_fragment"
         android:name="com.sean.taipeizoo.ui.home.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_home_to_area"
+            app:destination="@id/area_fragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/area_fragment"
+        android:name="com.sean.taipeizoo.ui.area.AreaFragment"
+        android:label="fragment_area"
+        tools:layout="@layout/fragment_area">
+        <argument
+            android:name="areaId"
+            app:argType="integer" />
+        <argument
+            android:name="areaName"
+            app:argType="string" />
+    </fragment>
 </navigation>
