--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#FF666666</color>
+    <color name="gray_gap">#FFEEEEEE</color>
+    <color name="gray_divider">#FFDDDDDD</color>
 </resources>
