--- a/app/src/main/res/layout/item_area_detail.xml
+++ b/app/src/main/res/layout/item_area_detail.xml
@@ -36,12 +36,22 @@
 
     <TextView
         android:id="@+id/category"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/memo" />
+
+    <TextView
+        android:id="@+id/link"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:text="@string/open_url"
+        android:textColor="@color/link_blue"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/category"
+        app:layout_constraintBottom_toBottomOf="@+id/category"/>
 
     <View
         android:id="@+id/gap"
